# hnco

./: .gitignore  .readthedocs.yaml  AUTHORS  Doxyfile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h.in  configure  configure.ac
app/: Makefile.am  Makefile.in  algorithm-factory.hh  application.cc  application.hh  decorated-function-factory.hh  ffgen-options.cc  ffgen-options.hh  ffgen.bash  ffgen.cc  ffgen.json  ffgen.sh  function-factory.hh  hnco-mo.cc  hnco-options.cc  hnco-options.hh  hnco.cc  hnco.json  hnco.sh  make-algorithm.cc  make-algorithm.hh  make-function.cc  make-function.hh  mapgen-options.cc  mapgen-options.hh  mapgen.cc  mapgen.json  mapgen.sh  optgen.pl
bindings/: .gitignore  Makefile.am  Makefile.in  hnco.cc  setup.py
bindings/examples/: bindings.py  multi-function-complete.py  multi-function.py  multiobjective-function.py  multiobjective-universal-function.py  one-max.py  progress-tracker.py  runtime.py  single-function-complete.py  singleobjective-function.py  universal-function-adapter.py  universal-function.py
docs/: Doxyfile  (+14 more)
examples/: Makefile.am  Makefile.in  README.md  basic.cc  bindings.py  cli-my-algorithm.cc  cli-my-function.cc  cli-universal-function-adapter.cc  cli-universal-function.cc  custom.cc  on-budget-function.cc  one-plus-one-ea-one-max.cc  onemax.c  stop-on-maximum.cc
experiments/: Makefile.am  Makefile.in
experiments/autocorrelation/: .gitignore  Makefile  plan.json
experiments/autocorrelation/report/: report.tex
experiments/benchmark/: .gitignore  Makefile  plan.json
experiments/dynamics/: .gitignore  Makefile  plan.json
experiments/ecdf/: .gitignore  Makefile  graphics.gp  plan.json
experiments/entropy/: .gitignore  Makefile  plan.json
experiments/function-parameter/: Makefile  plan.json
experiments/lookup-ratio/: .gitignore  plan.json
experiments/maximum/: .gitignore  Makefile  plan.json
experiments/modules/: .gitignore  MANIFEST  Makefile.PL
experiments/parameter/: .gitignore  Makefile  plan.json
experiments/runtime/: .gitignore  Makefile  plan.json
experiments/scripts/: Makefile.am  hnco-algorithm-alternative-run.pl  hnco-algorithm-alternative-skeleton.pl  hnco-algorithm-alternative-stat.pl  hnco-algorithm-category-run.pl  hnco-algorithm-category-stat.pl  hnco-algorithm-parameter-run.pl  hnco-algorithm-parameter-skeleton.pl  hnco-algorithm-parameter-stat.pl  hnco-autocorrelation-run.pl  hnco-autocorrelation-stat.pl  hnco-benchmark-run.pl  hnco-benchmark-skeleton.pl  hnco-benchmark-stat.pl  hnco-dynamics-stat.pl  hnco-ecdf-stat.pl  hnco-fixed-target-run.pl  hnco-fixed-target-stat.pl  hnco-function-parameter-stat.pl  hnco-lookup-ratio-stat.pl  hnco-maximum-evolution-stat.pl  hnco-observable-evolution-run.pl  hnco-observable-evolution-skeleton.pl  hnco-observable-evolution-stat.pl  hnco-runtime-run.pl  hnco-runtime-stat.pl  hnco-runtime2-run.pl  hnco-runtime2-skeleton.pl  hnco-runtime2-stat.pl  hnco-walsh-transforms-run.pl  hnco-walsh-transforms-skeleton.pl  hnco-walsh-transforms-stat.pl
experiments/walsh-transforms/: Makefile  plan.json
lib/: Makefile.am  Makefile.in
lib/fparser/: fpconfig.hh
lib/hnco/: bit-matrix.cc  bit-matrix.hh  bit-vector.cc  bit-vector.hh  exception.hh  iterator.cc  iterator.hh  linear-group.cc  linear-group.hh  map.cc  map.hh  permutation.cc  permutation.hh  random.cc  random.hh  serialization.hh  sparse-bit-matrix.cc  sparse-bit-matrix.hh  sparse-bit-vector.cc  sparse-bit-vector.hh  stop-watch.hh  transvection.cc  transvection.hh  util.hh
scripts/: MANIFEST  Makefile.PL  Makefile.am  Makefile.in  hnco-autocorrelation-run.pl  hnco-autocorrelation-stat.pl  hnco-benchmark-run.pl  hnco-benchmark-skeleton.pl  hnco-benchmark-stat.pl  hnco-dynamics-run.pl  hnco-dynamics-skeleton.pl  hnco-dynamics-stat-maximum.pl  hnco-dynamics-stat.pl  hnco-ecdf-run.py  hnco-ecdf-stat.pl  hnco-ecdf-stat.py  hnco-function-parameter-run.pl  hnco-function-parameter-skeleton.pl  hnco-function-parameter-stat.pl  hnco-lookup-ratio-stat.pl  hnco-maximum-stat.pl  hnco-parameter-run.pl  hnco-parameter-skeleton.pl  hnco-parameter-stat.pl  hnco-runtime-stat.pl  hnco-runtime2-run.pl  hnco-runtime2-skeleton.pl  hnco-runtime2-stat.pl  hnco-walsh-doc.pl  hnco-walsh-run.pl  hnco-walsh-skeleton.pl  hnco-walsh-stat.pl  optgen.pl
scripts/lib/: HNCO.pm
scripts/scripts/: hnco-autocorrelation-run.pl  hnco-autocorrelation-stat.pl  hnco-benchmark-run.pl  hnco-benchmark-stat.pl  hnco-dynamics-skeleton.pl  hnco-function-parameter-stat.pl  hnco-lookup-ratio-stat.pl  hnco-parameter-run.pl  hnco-walsh-skeleton.pl  hnco-walsh-stat.pl
src/: Makefile.am  Makefile.in  ffgen-options.cc  ffgen-options.hh  ffgen.cc  ffgen.json  ffgen.sh  hnco-options.cc  hnco-options.hh  hnco.cc  hnco.json  hnco.sh  make-algorithm.cc  make-algorithm.hh  make-function.cc  make-function.hh  mapgen-options.cc  mapgen-options.hh  mapgen.cc  mapgen.json  mapgen.sh
tests/: Makefile.am  Makefile.in  test-bm-add-columns.cc  test-bm-add-rows.cc  test-bm-identity.cc  test-bm-invert.cc  test-bm-multiply.cc  test-bm-rank.cc  test-bm-row-column-rank.cc  test-bm-solve.cc  test-bm-swap-rows.cc  test-bv-from-stream.cc  test-bv-random.cc  test-bv-to-size-type.cc  test-complete-search-deceptive-jump.cc  test-complete-search-factorization.cc  test-complete-search-four-peaks.cc  test-complete-search-hiff.cc  test-complete-search-jump.cc  test-complete-search-leading-ones.cc  test-complete-search-linear-function.cc  test-complete-search-long-path.cc  test-complete-search-max-sat.cc  test-complete-search-needle.cc  test-complete-search-one-max.cc  test-complete-search-plateau.cc  test-complete-search-ridge.cc  test-complete-search-six-peaks.cc  test-complete-search-trap.cc  test-complete-search-walsh-expansion-1.cc  test-dyadic-double-representation.cc  test-dyadic-float-representation.cc  test-dyadic-integer-representation.cc  test-dyadic-real-representation.cc  test-first-ascent-hill-climbing-local.cc  test-first-ascent-hill-climbing.cc  test-gl-apply.cc  test-hamming-sphere-iterator.cc  test-hamming-sphere.cc  test-herding-sample.cc  (+61 more)
(+793 files in other folders)
