# Copyright (C) 2016, 2017, 2018, 2019, 2020 Arnaud Berny

# This file is part of HNCO.

# HNCO is free software: you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# HNCO is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with HNCO. If not, see
# <http://www.gnu.org/licenses/>.

dist_bin_SCRIPTS = \
	scripts/hnco-autocorrelation-run.pl \
	scripts/hnco-autocorrelation-stat.pl \
	scripts/hnco-benchmark-run.pl \
	scripts/hnco-benchmark-skeleton.pl \
	scripts/hnco-benchmark-stat.pl \
	scripts/hnco-dynamics-run.pl \
	scripts/hnco-dynamics-skeleton.pl \
	scripts/hnco-dynamics-stat.pl \
	scripts/hnco-ecdf-stat.pl \
	scripts/hnco-function-parameter-stat.pl \
	scripts/hnco-lookup-ratio-stat.pl \
	scripts/hnco-maximum-stat.pl \
	scripts/hnco-parameter-run.pl \
	scripts/hnco-parameter-skeleton.pl \
	scripts/hnco-parameter-stat.pl \
	scripts/hnco-runtime-stat.pl \
	scripts/hnco-runtime2-run.pl \
	scripts/hnco-runtime2-skeleton.pl \
	scripts/hnco-runtime2-stat.pl \
	scripts/hnco-walsh-run.pl \
	scripts/hnco-walsh-skeleton.pl \
	scripts/hnco-walsh-stat.pl

EXTRA_DIST = \
	examples/autocorrelation/Makefile \
	examples/autocorrelation/instances/Makefile \
	examples/autocorrelation/instances/ep.100 \
	examples/autocorrelation/instances/lin.100 \
	examples/autocorrelation/instances/ms.100.3.1000 \
	examples/autocorrelation/instances/nk.100.4 \
	examples/autocorrelation/instances/walsh2.100 \
	examples/autocorrelation/plan.json \
	examples/autocorrelation/report/Makefile \
	examples/autocorrelation/report/report.tex \
	examples/benchmark/Makefile \
	examples/benchmark/instances/Makefile \
	examples/benchmark/instances/ep.100 \
	examples/benchmark/instances/lin.100 \
	examples/benchmark/instances/ms.100.3.1000 \
	examples/benchmark/instances/nk.100.4 \
	examples/benchmark/instances/walsh2.100 \
	examples/benchmark/plan.json \
	examples/benchmark/report/Makefile \
	examples/benchmark/report/report.tex \
	examples/dynamics/Makefile \
	examples/dynamics/instances/Makefile \
	examples/dynamics/instances/ep.100 \
	examples/dynamics/instances/lin.100 \
	examples/dynamics/instances/ms.100.3.1000 \
	examples/dynamics/instances/nk.100.4 \
	examples/dynamics/instances/walsh2.100 \
	examples/dynamics/plan.json \
	examples/dynamics/report/Makefile \
	examples/dynamics/report/report.tex \
	examples/ecdf/Makefile \
	examples/ecdf/instances/Makefile \
	examples/ecdf/instances/ep.100 \
	examples/ecdf/instances/lin.100 \
	examples/ecdf/instances/ms.100.3.1000 \
	examples/ecdf/instances/nk.100.4 \
	examples/ecdf/instances/walsh2.100 \
	examples/ecdf/plan.json \
	examples/ecdf/report/Makefile \
	examples/ecdf/report/report.tex \
	examples/function-parameter/Makefile \
	examples/function-parameter/plan.json \
	examples/function-parameter/report/Makefile \
	examples/function-parameter/report/report.tex \
	examples/maximum/Makefile \
	examples/maximum/instances/Makefile \
	examples/maximum/instances/ep.100 \
	examples/maximum/instances/lin.100 \
	examples/maximum/instances/ms.100.3.1000 \
	examples/maximum/instances/nk.100.4 \
	examples/maximum/instances/walsh2.100 \
	examples/maximum/plan.json \
	examples/maximum/report/Makefile \
	examples/maximum/report/report.tex \
	examples/parameter/Makefile \
	examples/parameter/instances/Makefile \
	examples/parameter/instances/ep.100 \
	examples/parameter/instances/lin.100 \
	examples/parameter/instances/ms.100.3.1000 \
	examples/parameter/instances/nk.100.4 \
	examples/parameter/instances/walsh2.100 \
	examples/parameter/plan.json \
	examples/parameter/report/Makefile \
	examples/parameter/report/report.tex \
	examples/runtime/Makefile \
	examples/runtime/plan.json \
	examples/runtime/report/Makefile \
	examples/runtime/report/report.tex \
	examples/walsh-transforms/Makefile \
	examples/walsh-transforms/instances/Makefile \
	examples/walsh-transforms/instances/ep.10 \
	examples/walsh-transforms/instances/lin.10 \
	examples/walsh-transforms/instances/ms.10.3.10 \
	examples/walsh-transforms/instances/nk.10.2 \
	examples/walsh-transforms/instances/walsh2.10 \
	examples/walsh-transforms/plan.json \
	examples/walsh-transforms/report/Makefile \
	examples/walsh-transforms/report/report.tex
