# Copyright (C) 2016, 2017, 2018, 2019, 2020 Arnaud Berny

# This file is part of HNCO.

# HNCO is free software: you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# HNCO is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General
# Public License for more details.

# You should have received a copy of the GNU Lesser General Public
# License along with HNCO. If not, see
# <http://www.gnu.org/licenses/>.

dist_bin_SCRIPTS = \
	scripts/hnco-algorithm-alternative-run.pl \
	scripts/hnco-algorithm-alternative-skeleton.pl \
	scripts/hnco-algorithm-alternative-stat.pl \
	scripts/hnco-algorithm-parameter-run.pl \
	scripts/hnco-algorithm-parameter-skeleton.pl \
	scripts/hnco-algorithm-parameter-stat.pl \
	scripts/hnco-autocorrelation-run.pl \
	scripts/hnco-autocorrelation-stat.pl \
	scripts/hnco-benchmark-run.pl \
	scripts/hnco-benchmark-skeleton.pl \
	scripts/hnco-benchmark-stat.pl \
	scripts/hnco-ecdf-stat.pl \
	scripts/hnco-fixed-target-run.pl \
	scripts/hnco-fixed-target-stat.pl \
	scripts/hnco-function-parameter-stat.pl \
	scripts/hnco-lookup-ratio-stat.pl \
	scripts/hnco-maximum-evolution-stat.pl \
	scripts/hnco-observable-evolution-run.pl \
	scripts/hnco-observable-evolution-skeleton.pl \
	scripts/hnco-observable-evolution-stat.pl \
	scripts/hnco-runtime-stat.pl \
	scripts/hnco-runtime2-run.pl \
	scripts/hnco-runtime2-skeleton.pl \
	scripts/hnco-runtime2-stat.pl \
	scripts/hnco-walsh-transforms-run.pl \
	scripts/hnco-walsh-transforms-skeleton.pl \
	scripts/hnco-walsh-transforms-stat.pl

EXTRA_DIST = \
	examples/algorithm-parameter/Makefile \
	examples/algorithm-parameter/instances/Makefile \
	examples/algorithm-parameter/instances/ep.100 \
	examples/algorithm-parameter/instances/lin.100 \
	examples/algorithm-parameter/instances/ms.100.3.1000 \
	examples/algorithm-parameter/instances/nk.100.4 \
	examples/algorithm-parameter/instances/walsh2.100 \
	examples/algorithm-parameter/plan.json \
	examples/algorithm-parameter/report/Makefile \
	examples/algorithm-parameter/report/report.tex \
	examples/autocorrelation/Makefile \
	examples/autocorrelation/instances/Makefile \
	examples/autocorrelation/instances/ep.100 \
	examples/autocorrelation/instances/lin.100 \
	examples/autocorrelation/instances/ms.100.3.1000 \
	examples/autocorrelation/instances/nk.100.4 \
	examples/autocorrelation/instances/walsh2.100 \
	examples/autocorrelation/plan.json \
	examples/autocorrelation/report/Makefile \
	examples/autocorrelation/report/report.tex \
	examples/benchmark/Makefile \
	examples/benchmark/instances/Makefile \
	examples/benchmark/instances/ep.100 \
	examples/benchmark/instances/lin.100 \
	examples/benchmark/instances/ms.100.3.1000 \
	examples/benchmark/instances/nk.100.4 \
	examples/benchmark/instances/walsh2.100 \
	examples/benchmark/plan.json \
	examples/benchmark/report/Makefile \
	examples/benchmark/report/report.tex \
	examples/ecdf/Makefile \
	examples/ecdf/instances/Makefile \
	examples/ecdf/instances/ep.100 \
	examples/ecdf/instances/lin.100 \
	examples/ecdf/instances/ms.100.3.1000 \
	examples/ecdf/instances/nk.100.4 \
	examples/ecdf/instances/walsh2.100 \
	examples/ecdf/plan.json \
	examples/ecdf/report/Makefile \
	examples/ecdf/report/report.tex \
	examples/fixed-target/Makefile \
	examples/fixed-target/plan.json \
	examples/fixed-target/report/Makefile \
	examples/fixed-target/report/report.tex \
	examples/function-parameter/Makefile \
	examples/function-parameter/plan.json \
	examples/function-parameter/report/Makefile \
	examples/function-parameter/report/report.tex \
	examples/maximum-evolution/Makefile \
	examples/maximum-evolution/instances/Makefile \
	examples/maximum-evolution/instances/ep.100 \
	examples/maximum-evolution/instances/lin.100 \
	examples/maximum-evolution/instances/ms.100.3.1000 \
	examples/maximum-evolution/instances/nk.100.4 \
	examples/maximum-evolution/instances/walsh2.100 \
	examples/maximum-evolution/plan.json \
	examples/maximum-evolution/report/Makefile \
	examples/maximum-evolution/report/report.tex \
	examples/observable-evolution/Makefile \
	examples/observable-evolution/instances/Makefile \
	examples/observable-evolution/instances/ep.100 \
	examples/observable-evolution/instances/lin.100 \
	examples/observable-evolution/instances/ms.100.3.1000 \
	examples/observable-evolution/instances/nk.100.4 \
	examples/observable-evolution/instances/walsh2.100 \
	examples/observable-evolution/plan.json \
	examples/observable-evolution/report/Makefile \
	examples/observable-evolution/report/report.tex \
	examples/runtime/Makefile \
	examples/runtime/plan.json \
	examples/runtime/report/Makefile \
	examples/runtime/report/report.tex \
	examples/walsh-transforms/Makefile \
	examples/walsh-transforms/instances/Makefile \
	examples/walsh-transforms/instances/ep.10 \
	examples/walsh-transforms/instances/lin.10 \
	examples/walsh-transforms/instances/ms.10.3.10 \
	examples/walsh-transforms/instances/nk.10.2 \
	examples/walsh-transforms/instances/walsh2.10 \
	examples/walsh-transforms/plan.json \
	examples/walsh-transforms/report/Makefile \
	examples/walsh-transforms/report/report.tex \
	modules/MANIFEST \
	modules/Makefile.PL \
	modules/lib/HNCO/Report.pm \
	modules/lib/HNCO/Run.pm
